--- a/admin.html
+++ b/admin.html
@@ -1,142 +1,232 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>מידע לפיקוד - LSPD</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>אדמין פאנל - LSPD</title>
   <link rel="icon" href="LSPD.png" type="image/png">
-  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <style>
-    /* אותו CSS כמו ב-index, רק שינוי קל לכותרות */
-    :root { /* אותם משתנים */ }
-    /* ... העתק את כל ה-:root ו-styles מ-index אם צריך ... */
-    .complaint-card {
-      background:var(--glass);
-      border:1px solid rgba(90,175,255,0.2);
-      border-radius:10px;
-      padding:1.4rem;
-      margin-bottom:1.4rem;
-    }
-    .delete-btn {
-      background:#ff5e5e;
-      color:white;
-      border:none;
-      padding:0.6rem 1.2rem;
-      border-radius:6px;
-      cursor:pointer;
-    }
-  </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="design.css">
 </head>
 <body>
 
-<header>
-  <!-- אותו header כמו ב-index -->
-  <div class="nav-container">
-    <div class="logo-area">
-      <img src="LSPD.png" alt="LSPD">
-      <span>LSPD</span>
-      <span id="userGreeting"></span>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow">
+    <div class="container">
+      <a class="navbar-brand d-flex align-items-center" href="index.html">
+        <img src="LSPD.png" alt="LSPD" width="48" class="me-2 rounded-circle">
+        LSPD
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html">ראשי</a></li>
+          <li class="nav-item"><a class="nav-link" href="command.html">מידע לפיקוד</a></li>
+          <li class="nav-item"><a class="nav-link active" href="admin.html">אדמין פאנל</a></li>
+          <li class="nav-item" id="logoutMenu">
+            <button id="logoutBtn" class="btn btn-outline-danger ms-3">התנתק</button>
+          </li>
+        </ul>
+      </div>
     </div>
-    <nav>
-      <ul id="mainNavUl">
-        <li><a href="index.html">ראשי</a></li>
-        <li><a href="command.html" class="active">מידע לפיקוד</a></li>
-        <li id="adminMenu" style="display:none;"><a href="admin.html">אדמין פאנל</a></li>
-        <li id="logoutMenu" style="display:none;">
-          <button class="auth-btn" id="logoutBtn">התנתק</button>
-        </li>
-      </ul>
-      <div class="burger" id="burgerMenu">☰</div>
-    </nav>
-  </div>
-</header>
+  </nav>
 
-<main>
-  <div class="container" style="padding:2rem 1rem;max-width:1100px;margin:0 auto;">
-    <h1>תלונות אנונימיות</h1>
-    <div id="complaintsList"></div>
-    <p id="noComplaints" style="text-align:center;color:#c3d4e9;display:none;">אין תלונות כרגע</p>
-  </div>
-</main>
+  <main class="pt-5 mt-5">
+    <div class="container py-5">
+      <h1 class="text-center mb-5 text-danger">אדמין פאנל – ניהול משתמשים</h1>
 
-<footer>
-  <!-- אותו footer -->
-</footer>
+      <!-- טופס הוספת משתמש חדש -->
+      <div class="card bg-dark-transparent border border-primary mb-5">
+        <div class="card-header bg-dark border-primary">
+          <h5 class="mb-0">הוסף משתמש חדש</h5>
+        </div>
+        <div class="card-body">
+          <form id="addUserForm">
+            <div class="row g-3">
+              <div class="col-md-6">
+                <label class="form-label">שם משתמש</label>
+                <input type="text" id="newUsername" class="form-control bg-dark text-white border-secondary" required>
+              </div>
+              <div class="col-md-6">
+                <label class="form-label">סיסמה</label>
+                <input type="text" id="newPassword" class="form-control bg-dark text-white border-secondary" required>
+              </div>
+            </div>
+            <button type="submit" class="btn btn-success mt-3 w-100">הוסף משתמש</button>
+          </form>
+        </div>
+      </div>
 
-<script>
-const BIN_ID_COMPLAINTS = '69789c5d43b1c97be94e3c8b';
+      <!-- רשימת משתמשים -->
+      <h3 class="mb-4">משתמשים קיימים</h3>
+      <div class="table-responsive">
+        <table class="table table-dark table-hover table-striped">
+          <thead>
+            <tr>
+              <th>שם משתמש</th>
+              <th>האם אדמין?</th>
+              <th>פעולות</th>
+            </tr>
+          </thead>
+          <tbody id="usersTableBody"></tbody>
+        </table>
+      </div>
+    </div>
+  </main>
 
-async function loadComplaints() {
-  try {
-    const r = await fetch(`https://api.jsonbin.io/v3/b/${BIN_ID_COMPLAINTS}`);
-    const d = await r.json();
-    return d.record.complaints || [];
-  } catch(e) {
-    console.error(e);
-    return [];
-  }
-}
+  <footer class="bg-dark text-white text-center py-4 mt-auto">
+    <div class="container">
+      <img src="gen.png" alt="Gen" width="60" class="mb-3 rounded-circle">
+      <p class="mb-1">© 2025–2026 | האתר נבנה על ידי tomcupcake</p>
+    </div>
+  </footer>
 
-async function deleteComplaint(id) {
-  if (!confirm('בטוח למחוק?')) return;
-  let list = await loadComplaints();
-  list = list.filter(c => c.id !== id);
-  await fetch(`https://api.jsonbin.io/v3/b/${BIN_ID_COMPLAINTS}`, {
-    method: 'PUT',
-    headers: {'Content-Type':'application/json'},
-    body: JSON.stringify({complaints: list})
-  });
-  render();
-}
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const currentUser = localStorage.getItem("lspd_currentUser");
+    const isLoggedIn = localStorage.getItem("lspd_loggedIn") === "true";
 
-function render() {
-  loadComplaints().then(complaints => {
-    const container = document.getElementById('complaintsList');
-    container.innerHTML = '';
-    document.getElementById('noComplaints').style.display = complaints.length ? 'none' : 'block';
+    const users = JSON.parse(localStorage.getItem("lspd_users")) || {};
+    const userData = users[currentUser] || {};
 
-    complaints.forEach(c => {
-      const div = document.createElement('div');
-      div.className = 'complaint-card';
-      div.innerHTML = `
-        <strong>${c.subject}</strong><br>
-        <small>${c.date}</small><br><br>
-        <strong>מפקד:</strong> ${c.commander} • <strong>תג:</strong> ${c.badge}<br><br>
-        ${c.content.replace(/\n/g,'<br>')}<br><br>
-        ${localStorage.getItem("lspd_currentUser") === "Artzy" ?
-          `<button class="delete-btn" onclick="deleteComplaint(${c.id})">מחק</button>` : ''}
-      `;
-      container.appendChild(div);
+    // בדיקת גישה – כל מי שיש לו isAdmin: true יכול להיכנס
+    if (!isLoggedIn) {
+      alert("עליך להתחבר קודם");
+      location.href = "index.html";
+      return;
+    }
+
+    if (!currentUser || !users[currentUser]) {
+      alert("שגיאה: משתמש לא קיים במערכת");
+      location.href = "index.html";
+      return;
+    }
+
+    if (userData.isAdmin !== true) {
+      alert("אין לך הרשאות אדמין");
+      location.href = "index.html";
+      return;
+    }
+
+    // הגישה אושרה
+    console.log(`גישה מאושרת למשתמש ${currentUser} (אדמין: ${userData.isAdmin})`);
+
+    const saveUsers = () => {
+      localStorage.setItem("lspd_users", JSON.stringify(users));
+    };
+
+    const renderUsers = () => {
+      const tbody = document.getElementById("usersTableBody");
+      tbody.innerHTML = "";
+
+      Object.keys(users).forEach(username => {
+        const u = users[username];
+        const isAdmin = u.isAdmin === true;
+
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
+          <td>${username}</td>
+          <td class="text-center">
+            <div class="form-check form-switch d-flex justify-content-center">
+              <input class="form-check-input admin-checkbox" type="checkbox" 
+                     ${isAdmin ? 'checked' : ''} 
+                     data-username="${username}"
+                     ${username === "Artzy" ? 'disabled' : ''}>
+            </div>
+          </td>
+          <td>
+            <button class="btn btn-sm btn-warning me-2 edit-password" data-username="${username}">
+              ערוך סיסמה
+            </button>
+            ${username !== "Artzy" ? `
+              <button class="btn btn-sm btn-danger delete-user" data-username="${username}">
+                מחק
+              </button>
+            ` : '<span class="text-muted">לא ניתן למחוק</span>'}
+          </td>
+        `;
+        tbody.appendChild(tr);
+      });
+
+      // האזנה לשינוי checkbox (אדמין)
+      document.querySelectorAll(".admin-checkbox").forEach(checkbox => {
+        checkbox.addEventListener("change", (e) => {
+          const username = e.target.dataset.username;
+          users[username].isAdmin = e.target.checked;
+          saveUsers();
+          console.log(`משתמש ${username} → אדמין: ${e.target.checked}`);
+        });
+      });
+
+      // האזנה לכפתור "ערוך סיסמה"
+      document.querySelectorAll(".edit-password").forEach(btn => {
+        btn.addEventListener("click", (e) => {
+          const username = e.target.dataset.username;
+          const currentPass = users[username].password;
+
+          const newPassword = prompt(`סיסמה חדשה למשתמש ${username}\n(הסיסמה הנוכחית: ${currentPass})\n\nהקלד סיסמה חדשה או בטל לשמירה:`, currentPass);
+          
+          if (newPassword === null) return;
+
+          const trimmedPass = newPassword.trim();
+          if (trimmedPass === "") {
+            alert("סיסמה לא יכולה להיות ריקה!");
+            return;
+          }
+
+          users[username].password = trimmedPass;
+          saveUsers();
+          alert(`סיסמה עודכנה בהצלחה עבור ${username}`);
+          renderUsers();
+        });
+      });
+    };
+
+    renderUsers();
+
+    // הוספת משתמש חדש
+    document.getElementById("addUserForm")?.addEventListener("submit", e => {
+      e.preventDefault();
+      const username = document.getElementById("newUsername").value.trim();
+      const password = document.getElementById("newPassword").value.trim();
+
+      if (!username || !password) {
+        alert("יש למלא שם משתמש וסיסמה");
+        return;
+      }
+      if (users[username]) {
+        alert("שם המשתמש כבר קיים");
+        return;
+      }
+
+      users[username] = { password, isAdmin: false };
+      saveUsers();
+      renderUsers();
+      e.target.reset();
+      alert("משתמש נוסף בהצלחה");
+    });
+
+    // מחיקת משתמש
+    document.addEventListener("click", e => {
+      if (e.target.classList.contains("delete-user")) {
+        const username = e.target.dataset.username;
+        if (confirm(`בטוח למחוק את המשתמש ${username}?`)) {
+          delete users[username];
+          saveUsers();
+          renderUsers();
+        }
+      }
+    });
+
+    // התנתקות
+    document.getElementById("logoutBtn")?.addEventListener("click", () => {
+      localStorage.removeItem("lspd_loggedIn");
+      localStorage.removeItem("lspd_currentUser");
+      location.href = "index.html";
     });
   });
-}
-
-document.addEventListener('DOMContentLoaded', () => {
-  // burger
-  const burger = document.getElementById('burgerMenu');
-  const navUl  = document.querySelector('#mainNavUl');
-  if (burger && navUl) {
-    burger.addEventListener('click', () => {
-      navUl.classList.toggle('active');
-      burger.textContent = navUl.classList.contains('active') ? '✕' : '☰';
-    });
-  }
-
-  // render complaints
-  render();
-
-  // logout
-  document.getElementById('logoutBtn')?.addEventListener('click', () => {
-    localStorage.removeItem("lspd_loggedIn");
-    localStorage.removeItem("lspd_currentUser");
-    location.href = "index.html";
-  });
-
-  // show admin menu if Artzy
-  if (localStorage.getItem("lspd_currentUser") === "Artzy") {
-    document.getElementById('adminMenu').style.display = 'list-item';
-  }
-});
-</script>
+  </script>
 </body>
 </html>
