--- a/command.html
+++ b/command.html
@@ -1,142 +1,125 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>מידע לפיקוד - LSPD</title>
   <link rel="icon" href="LSPD.png" type="image/png">
-  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <style>
-    /* אותו CSS כמו ב-index, רק שינוי קל לכותרות */
-    :root { /* אותם משתנים */ }
-    /* ... העתק את כל ה-:root ו-styles מ-index אם צריך ... */
-    .complaint-card {
-      background:var(--glass);
-      border:1px solid rgba(90,175,255,0.2);
-      border-radius:10px;
-      padding:1.4rem;
-      margin-bottom:1.4rem;
-    }
-    .delete-btn {
-      background:#ff5e5e;
-      color:white;
-      border:none;
-      padding:0.6rem 1.2rem;
-      border-radius:6px;
-      cursor:pointer;
-    }
-  </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="design.css">
 </head>
 <body>
 
-<header>
-  <!-- אותו header כמו ב-index -->
-  <div class="nav-container">
-    <div class="logo-area">
-      <img src="LSPD.png" alt="LSPD">
-      <span>LSPD</span>
-      <span id="userGreeting"></span>
+  <!-- Navbar (כמו ב-index, אבל עם התאמות) -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow">
+    <div class="container">
+      <a class="navbar-brand d-flex align-items-center" href="index.html">
+        <img src="LSPD.png" alt="LSPD" width="48" class="me-2 rounded-circle">
+        LSPD
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html">ראשי</a></li>
+          <li class="nav-item"><a class="nav-link active" href="command.html">מידע לפיקוד</a></li>
+          <li class="nav-item d-none" id="adminMenu">
+            <a class="nav-link" href="admin.html">אדמין פאנל</a>
+          </li>
+          <li class="nav-item" id="logoutMenu">
+            <button id="logoutBtn" class="btn btn-outline-danger ms-3">התנתק</button>
+          </li>
+        </ul>
+      </div>
     </div>
-    <nav>
-      <ul id="mainNavUl">
-        <li><a href="index.html">ראשי</a></li>
-        <li><a href="command.html" class="active">מידע לפיקוד</a></li>
-        <li id="adminMenu" style="display:none;"><a href="admin.html">אדמין פאנל</a></li>
-        <li id="logoutMenu" style="display:none;">
-          <button class="auth-btn" id="logoutBtn">התנתק</button>
-        </li>
-      </ul>
-      <div class="burger" id="burgerMenu">☰</div>
-    </nav>
-  </div>
-</header>
+  </nav>
 
-<main>
-  <div class="container" style="padding:2rem 1rem;max-width:1100px;margin:0 auto;">
-    <h1>תלונות אנונימיות</h1>
-    <div id="complaintsList"></div>
-    <p id="noComplaints" style="text-align:center;color:#c3d4e9;display:none;">אין תלונות כרגע</p>
-  </div>
-</main>
+  <main class="pt-5 mt-5">
+    <div class="container py-5">
+      <h1 class="text-center mb-5 text-primary">מידע לפיקוד – תלונות אנונימיות</h1>
 
-<footer>
-  <!-- אותו footer -->
-</footer>
+      <div id="complaintsList" class="row g-4"></div>
 
-<script>
-const BIN_ID_COMPLAINTS = '69789c5d43b1c97be94e3c8b';
+      <div id="noComplaints" class="text-center text-muted fs-4 py-5 d-none">
+        אין תלונות חדשות כרגע.
+      </div>
+    </div>
+  </main>
 
-async function loadComplaints() {
-  try {
-    const r = await fetch(`https://api.jsonbin.io/v3/b/${BIN_ID_COMPLAINTS}`);
-    const d = await r.json();
-    return d.record.complaints || [];
-  } catch(e) {
-    console.error(e);
-    return [];
-  }
-}
+  <footer class="bg-dark text-white text-center py-4 mt-auto">
+    <div class="container">
+      <img src="gen.png" alt="Gen" width="60" class="mb-3 rounded-circle">
+      <p class="mb-1">© 2025–2026 | האתר נבנה על ידי tomcupcake</p>
+    </div>
+  </footer>
 
-async function deleteComplaint(id) {
-  if (!confirm('בטוח למחוק?')) return;
-  let list = await loadComplaints();
-  list = list.filter(c => c.id !== id);
-  await fetch(`https://api.jsonbin.io/v3/b/${BIN_ID_COMPLAINTS}`, {
-    method: 'PUT',
-    headers: {'Content-Type':'application/json'},
-    body: JSON.stringify({complaints: list})
-  });
-  render();
-}
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const complaints = JSON.parse(localStorage.getItem("lspd_complaints")) || [];
+      const listEl = document.getElementById("complaintsList");
+      const noComplaintsEl = document.getElementById("noComplaints");
 
-function render() {
-  loadComplaints().then(complaints => {
-    const container = document.getElementById('complaintsList');
-    container.innerHTML = '';
-    document.getElementById('noComplaints').style.display = complaints.length ? 'none' : 'block';
+      if (complaints.length === 0) {
+        noComplaintsEl.classList.remove("d-none");
+        return;
+      }
 
-    complaints.forEach(c => {
-      const div = document.createElement('div');
-      div.className = 'complaint-card';
-      div.innerHTML = `
-        <strong>${c.subject}</strong><br>
-        <small>${c.date}</small><br><br>
-        <strong>מפקד:</strong> ${c.commander} • <strong>תג:</strong> ${c.badge}<br><br>
-        ${c.content.replace(/\n/g,'<br>')}<br><br>
-        ${localStorage.getItem("lspd_currentUser") === "Artzy" ?
-          `<button class="delete-btn" onclick="deleteComplaint(${c.id})">מחק</button>` : ''}
-      `;
-      container.appendChild(div);
+      complaints.forEach(comp => {
+        const card = document.createElement("div");
+        card.className = "col-lg-6 col-xl-4";
+        card.innerHTML = `
+          <div class="card bg-dark-transparent text-white border border-secondary h-100 shadow">
+            <div class="card-header bg-dark border-secondary d-flex justify-content-between align-items-center">
+              <strong>${comp.subject}</strong>
+              <small class="text-muted">${comp.date}</small>
+            </div>
+            <div class="card-body">
+              <p class="mb-2"><strong>שם המפקד:</strong> ${comp.commander}</p>
+              <p class="mb-2"><strong>מספר תג:</strong> ${comp.badge}</p>
+              <p class="mb-3"><strong>תוכן:</strong><br>${comp.content.replace(/\n/g, "<br>")}</p>
+            </div>
+            <div class="card-footer bg-transparent border-0 text-end">
+              <button class="btn btn-sm btn-danger delete-complaint" data-id="${comp.id}">
+                מחק תלונה
+              </button>
+            </div>
+          </div>
+        `;
+        listEl.appendChild(card);
+      });
+
+      // מחיקת תלונה
+      document.querySelectorAll(".delete-complaint").forEach(btn => {
+        btn.addEventListener("click", () => {
+          if (!confirm("בטוח למחוק את התלונה הזו?")) return;
+          const id = Number(btn.dataset.id);
+          const updated = complaints.filter(c => c.id !== id);
+          localStorage.setItem("lspd_complaints", JSON.stringify(updated));
+          location.reload();
+        });
+      });
+
+      // הגנת דף + ניהול navbar
+      if (localStorage.getItem("lspd_loggedIn") !== "true") {
+        alert("עליך להתחבר כדי לגשת לאזור זה");
+        location.href = "index.html";
+      }
+
+      const isAdmin = () => {
+        const user = localStorage.getItem("lspd_currentUser");
+        const users = JSON.parse(localStorage.getItem("lspd_users")) || {};
+        return user && users[user]?.isAdmin;
+      };
+
+      document.getElementById("adminMenu")?.classList.toggle("d-none", !isAdmin());
+      document.getElementById("logoutBtn")?.addEventListener("click", () => {
+        localStorage.removeItem("lspd_loggedIn");
+        localStorage.removeItem("lspd_currentUser");
+        location.href = "index.html";
+      });
     });
-  });
-}
-
-document.addEventListener('DOMContentLoaded', () => {
-  // burger
-  const burger = document.getElementById('burgerMenu');
-  const navUl  = document.querySelector('#mainNavUl');
-  if (burger && navUl) {
-    burger.addEventListener('click', () => {
-      navUl.classList.toggle('active');
-      burger.textContent = navUl.classList.contains('active') ? '✕' : '☰';
-    });
-  }
-
-  // render complaints
-  render();
-
-  // logout
-  document.getElementById('logoutBtn')?.addEventListener('click', () => {
-    localStorage.removeItem("lspd_loggedIn");
-    localStorage.removeItem("lspd_currentUser");
-    location.href = "index.html";
-  });
-
-  // show admin menu if Artzy
-  if (localStorage.getItem("lspd_currentUser") === "Artzy") {
-    document.getElementById('adminMenu').style.display = 'list-item';
-  }
-});
-</script>
+  </script>
 </body>
 </html>
